--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ yarn-error.log*
 *.tsbuildinfo
 api/config.inc.php
 api/config.inc.php
+api/tools/全国职业教育智慧大脑院校中台 中职数据标准及接口规范-2023.06-分表.xlsx
+.gitignore
