--- a/.gitignore
+++ b/.gitignore
@@ -6,15 +6,18 @@
 .pnp.js
 
 # PHP library
+/cache
 /api/cache
-/api/config.inc.php
 
 # testing
 /coverage
 
+# goview
+/goview
+
 # next.js
 /.next/
-/out/
+/webroot/
 
 # production
 /build
@@ -36,7 +39,4 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
-api/config.inc.php
-api/config.inc.php
-api/tools/全国职业教育智慧大脑院校中台 中职数据标准及接口规范-2023.06-分表.xlsx
-.gitignore
+api/tools/update_core.html
