--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export",
+    "export": "next export --outdir webroot",
     "lint": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "build:icons": "tsc -b src/iconify-bundle && node src/iconify-bundle/bundle-icons-react.js"
@@ -27,6 +27,7 @@
     "@fullcalendar/timegrid": "5.11.3",
     "@hookform/resolvers": "2.9.10",
     "@iconify/react": "4.0.0",
+    "@mui/icons-material": "^5.14.3",
     "@mui/lab": "5.0.0-alpha.105",
     "@mui/material": "5.10.11",
     "@mui/x-data-grid": "5.17.9",
@@ -49,9 +50,11 @@
     "i18next-http-backend": "2.0.0",
     "jsonwebtoken": "^9.0.0",
     "keen-slider": "6.8.3",
+    "mammoth": "^1.6.0",
     "mousetrap": "^1.6.5",
     "next": "13.0.0",
     "nprogress": "0.2.0",
+    "officegen": "^0.6.5",
     "payment": "2.4.6",
     "prismjs": "1.29.0",
     "qs": "^6.11.0",
@@ -63,9 +66,12 @@
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "1.15.0",
     "react-dropzone": "14.2.3",
+    "react-excel-renderer": "^1.1.0",
+    "react-file-viewer": "^1.2.1",
     "react-hook-form": "7.38.0",
     "react-hot-toast": "2.4.0",
     "react-i18next": "12.0.0",
+    "react-pdf": "^7.3.3",
     "react-perfect-scrollbar": "1.5.8",
     "react-popper": "2.3.0",
     "react-redux": "8.0.4",
@@ -80,7 +86,7 @@
     "@iconify/json": "2.1.131",
     "@iconify/tools": "2.1.1",
     "@iconify/types": "2.0.0",
-    "@iconify/utils": "2.0.1",
+    "@iconify/utils": "^2.1.9",
     "@types/cleave.js": "1.4.7",
     "@types/draft-convert": "^2.1.4",
     "@types/draft-js": "0.11.9",
@@ -105,6 +111,7 @@
     "eslint-plugin-import": "2.26.0",
     "next-transpile-modules": "9.1.0",
     "prettier": "2.7.1",
+    "raw-loader": "^4.0.2",
     "typescript": "4.8.4"
   },
   "resolutions": {
